--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;800&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles.css">
   <title>Meme Picker</title>
 </head>
 <body>
   
+  <header>
+		<div class="header-inner">
+			<img src="./images/pumpkin.png" class="pumpkin-img">
+			<div>
+				<h2>Pumpkin's Purrfect...</h2>
+				<h1>Meme Picker</h1>
+			</div>
+		</div>
+	</header>
+
 </body>
 </html>
