--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <div id="meme-modal-inner"></div>
   </div>
   
-<script src="index.js" type="module"></script>
+<script src="/js/index.js" type="module"></script>
 </body>
 </html>
